<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/quitbck"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_two"
            android:text="@string/are_you_sure_you_want_to_quit_ncurrent_progress_will_be_lost"
            android:textAlignment="center"
            android:textColor="#F0F5F6"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/soundID"
            android:layout_width="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <Button
                android:id="@+id/yesbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F43131"
                android:fontFamily="@font/baloo_bhaina"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                />

            <Button
                android:id="@+id/nobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:backgroundTint="#65CD22"
                android:fontFamily="@font/baloo_bhaina"
                android:text="@string/no"
                app:cornerRadius="20dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                 />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>